# QuadViewAnalyzer

./: .gitignore  README.md  build.py  build_nuitka.py  build_pyinstaller.py  main.py  pyproject.toml
assets/palettes/: Colormap.py  Palette.py
assets/widgets/: CustomTreeView.py  FloatInputWidget.py  ImportFileButton.py  StandardToolButton.py  TextBoxWithButton.py  __init__.py
model/: QuadModel.py
model/helpers/: mat_loader.py
requirements/: dev.sh  dev.txt  requirements.txt
view/: QuadView.py
viewmodel/: QuadViewModel.py
viewmodel/helpers/: tree_menu_search_filter.py
