[project]
name = "quadviewanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqtgraph>=0.13.7",
    "pyside6>=6.8.2.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.6.8",
    "pyinstaller>=6.12.0",
]
